1)Upvotes in My Profile 2)Avatar for dropdown 3)Internalization

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,5 +1,31 @@
-bread=Bread
-sos=Sause
-gramaj=Weight
-kartofi=Potatoes
-meso=Meat
+account=Account
+Birthday=Birthday
+changeUsername=change username
+changeEmail=change email
+COMMENTS=COMMENTS
+Description=Description
+forgottenPass=Forgotten Password
+fresh=Fresh
+hot=Hot
+email=email
+Gender=Gender
+logIn=Login
+logout=Logout
+myProfile=My Profile
+newPass=new-password
+Password=Password
+password=password
+points=points: 
+Profile=Profile
+POSTS=POSTS
+reNewPass=re-type new-password
+upAvatar=Upload Avatar
+upload=Upload
+UPVOTES=UPVOTES
+user=user
+saveChanges=save changes
+search=search
+search...=search...
+settings=Settings
+signUp=Sign up
+yourName=Your Full Name
