Adding 1)validations 2)comments 3)css

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -26,6 +26,7 @@ user=user
 saveChanges=save changes
 search=search
 search...=search...
+sendNewPass = Send new password
 settings=Settings
 signUp=Sign up
 yourName=Your Full Name
